Enhance CreateADirectory.java